compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/instance.kt
object <!CONFLICTING_JVM_DECLARATIONS!>O<!> {
    <!CONFLICTING_JVM_DECLARATIONS!>val `instance$`: O<!> = null!!
}